--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,21 @@
         <artifactId>spring-boot-maven-plugin</artifactId>
         <version>2.7.9</version>
       </plugin>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <mainClass>com.example.workflow.Application</mainClass>
+        </configuration>
+
+        <executions>
+          <execution>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
